<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/main_bottom_main"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/main_bottom_main_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/main_bottom_main_off" />

        <TextView
            android:id="@+id/main_bottom_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:text="@string/main_bottom_mian_tv"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottom_pay"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/main_bottom_pay_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/main_bottom_pay_off" />

        <TextView
            android:id="@+id/main_bottom_pay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:text="@string/main_bottom_pay_tv"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottom_roe"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/main_bottom_roe_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/main_bottom_roe_off" />

        <TextView
            android:id="@+id/main_bottom_roe_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:text="@string/main_bottom_roe_tv"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottom_user"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/main_bottom_user_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/main_bottom_user_off" />

        <TextView
            android:id="@+id/main_bottom_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:text="@string/main_bottom_user_tv"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>